# Qt-AstraSpecs

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
components/BottomBar/: BottomBar.qml
components/TopBar/: TopBar.qml
components/body/: body.qml
controllers/: jsoncontroller.cpp  jsoncontroller.h  tcpcontroller.cpp  tcpcontroller.h  uartcontroller.cpp  uartcontroller.h
json/: jsonreceiver.cpp  jsonreceiver.h  jsonsender.cpp  jsonsender.h
network/: httpserver.cpp  httpserver.h  tcpserver.cpp  tcpserver.h
uart/: uartmanager.cpp  uartmanager.h
